--- a/acerca de.html
+++ b/acerca de.html
@@ -6,6 +6,7 @@
   
 </head>
 <body>
+  
   <div class="container-nav">
     <nav class="navbar" role="navigation"> 
       <a href="#" class="brand">Mi pagina web</a>
@@ -25,6 +26,12 @@
   <img src="Egg-Inc.-Icon.png" alt="gallina" width="300px" />
   <img src="ilustracion_prog.png" alt="programacion" width="300px" />
 </div>
+
+<h1>Gracias pr su visita</h1>
+<div class="geeting"></div>
+
+</div>
+
 
 
 <script src="script.js"></script>
